--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
     </div>
 </header>
 
-<section class="header__menu header__menu_fixed">
+<section class="header__menu">
     <div class="container">
         <div class="row">
 
