--- a/public/about.html
+++ b/public/about.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="libs/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="libs/magnific.css" type="text/css">
+    <link rel="stylesheet" href="libs/swiper.min.css" type="text/css">
     <link rel="stylesheet" href="css/all.css" type="text/css">
     <title>О компании Аника Тур</title>
 
@@ -75,7 +77,7 @@
     </div>
 </header>
 
-<section class="header__menu header__menu_fixed">
+<section class="header__menu">
     <div class="container">
         <div class="row">
 
